# vita-gamepad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: protocol.md
docs/tasks/: task_detail_2026_07_17.md
scripts/: build_windows.ps1
tests/: test_gui.py  test_mapping.py  test_protocol.py  test_receiver.py  test_windows_backend.py
vita/: CMakeLists.txt
vita/assets/: generate_assets.py
vita/sce_sys/livearea/contents/: template.xml
vita/src/: main.c
vitapad/: __init__.py  __main__.py  cli.py  gui.py  mapping.py  protocol.py  receiver.py  usb_transport.py
vitapad/backends/: __init__.py  debug.py  macos.py  windows.py
