[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vita-gamepad"
version = "0.2.1"
description = "Use a PlayStation Vita as a low-latency network gamepad"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vita Gamepad contributors" }]
dependencies = []

[project.optional-dependencies]
windows = ["vgamepad>=0.1.0"]

[project.scripts]
vitapad = "vitapad.cli:main"
vitapad-gui = "vitapad.gui:main"

[tool.setuptools.packages.find]
include = ["vitapad*"]
